# RESPINOW-realtime

./: README.md  pyproject.toml
code/: compute_forecasts.ipynb  compute_scores.ipynb  get_data.py  plot_forecasts.ipynb  rga.ipynb  submission.py  submission_are.py  submission_merged.py  tuning_lightgbm.ipynb  tuning_tsmixer.ipynb  unused_functions.ipynb
code/src/: forecasting.py  load_data.py  realtime_utils.py  tuning.py
forecasts/lightgbm-no_covariates-coupling/: Untitled.ipynb
nowcasts/simple_nowcast/: 2025-10-02-icosari-sari-simple_nowcast.csv  2025-10-09-icosari-sari-simple_nowcast.csv  2025-10-16-icosari-sari-simple_nowcast.csv  2025-10-23-icosari-sari-simple_nowcast.csv  2025-10-30-icosari-sari-simple_nowcast.csv  2025-11-06-icosari-sari-simple_nowcast.csv  2025-11-13-icosari-sari-simple_nowcast.csv  2025-11-20-icosari-sari-simple_nowcast.csv  2025-11-27-agi-are-simple_nowcast.csv  2025-11-27-icosari-sari-simple_nowcast.csv  2025-12-04-icosari-sari-simple_nowcast.csv  2025-12-11-agi-are-simple_nowcast.csv  2025-12-11-icosari-sari-simple_nowcast.csv  2025-12-18-agi-are-simple_nowcast.csv  2025-12-18-icosari-sari-simple_nowcast.csv  2026-01-08-agi-are-simple_nowcast.csv  2026-01-08-icosari-sari-simple_nowcast.csv  2026-01-15-agi-are-simple_nowcast.csv  2026-01-15-icosari-sari-simple_nowcast.csv
r/: .Rhistory
r/hhh4/: core_hhh4.R  functions_hhh4.R  hhh4_default.R  setup_hhh4.R
r/nowcasting/: nowcasting.R
results/tuning/: gridsearch_lightgbm.csv  gridsearch_lightgbm_are.csv  gridsearch_tsmixer.csv  gridsearch_tsmixer_are.csv
(+8 files in other folders)
